[project]
name = "construction-hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "awswrangler>=3.11.0",
    "boto3>=1.36.6",
    "fastapi>=0.115.7",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "jupyterlab>=4.3.4",
    "modal>=0.72.49",
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
    "requests>=2.32.3",
]
